--- a/.github/workflows/superset-python-presto-hive.yml
+++ b/.github/workflows/superset-python-presto-hive.yml
@@ -5,8 +5,8 @@ on:
   push:
     branches-ignore:
       - "dependabot/npm_and_yarn/**"
-  pull_request:
-    types: [synchronize, opened, reopened, ready_for_review]
+  # pull_request:
+  #   types: [synchronize, opened, reopened, ready_for_review]
 
 jobs:
   test-postgres-presto:
